<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
       >
        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/appicono" />
    </RelativeLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtusuario">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtclave">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/clave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>
<Button
    android:id="@+id/sesion"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textColor="@color/primaryColor"
    android:text="@string/btnsesion"
    />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtnousuario"/>
    <TextView
        android:id="@+id/crearusuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtcrearusuario"/>
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtolvidoclave"/>
        <TextView
            android:id="@+id/recuperarclave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtrecuperarclave"/>
    </LinearLayout>


</LinearLayout>