<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BaseDatosActivity">
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/msgid">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtid"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/msgtitulo">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txttitulo"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/msgdescripcion">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtdescripcion"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/msgisbn">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtisbn"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="https://www.skylabcoders.com/images/25517/image_width_33.png"
            android:id="@+id/txtimagen"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnguardar"
        android:text="Guardar"
        android:background="@color/primaryColor"/>

       <Button
        android:id="@+id/btnconsultar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Consulta por código"
        android:background="@color/primaryColor"
         />

    <Button
        android:id="@+id/btnconsultarnombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Consulta por descripción"
        android:background="@color/primaryColor"
         />

    <Button
        android:id="@+id/btneliminar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Eliminar por código"
        android:background="@color/primaryColor"
        />

    <Button
        android:id="@+id/btnmodificar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Modificación"
        android:background="@color/primaryColor"
       />


</LinearLayout>